--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,16 @@
-version: '3.5'
+version '3.5'
 
-services:
-  app:
-    build: .
-    tty: true
-    stdin_open: true
-    restart: always
-    expose:
-      - "8000"
-    ports:
-      - "8000:8000"
-    links:
-      - db
-    working_dir: /mpharma
-    volumes:
-      - .:/mpharma
-      - ./ssh:/root/.ssh
-    command: ./manage.py runserver 0.0.0.0:8000
+services :
+    web :
+        build: .
+        command:  python /mpharma/manage.py runserver 0.0.0.0:8000
+        volumes:
+          - .:/mpharma
 
-  db:
-    image: postgres:10.4
+        ports:
+          - "8000:8000"
+
+        depends_on :
+          - db
+    db:
+      image : postgress
