--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version '3.5'
+version: '2'
 
-services :
-    web :
+services:
+    web:
         build: .
         command:  python /mpharma/manage.py runserver 0.0.0.0:8000
         volumes:
@@ -10,7 +10,7 @@ services :
         ports:
           - "8000:8000"
 
-        depends_on :
+        depends_on:
           - db
     db:
-      image : postgress
+      image: postgres
